--- a/app/src/main/res/layout/continuous_scan.xml
+++ b/app/src/main/res/layout/continuous_scan.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@android:color/holo_red_dark"
     android:orientation="vertical"
     android:layout_height="match_parent">
 
