--- a/app/src/main/res/layout/activity_user_area.xml
+++ b/app/src/main/res/layout/activity_user_area.xml
@@ -8,6 +8,13 @@
     android:fitsSystemWindows="true"
     tools:openDrawer="start">
 
+    <!--progress dialog for loading purpose-->
+
+    <include layout="@layout/progress_dialog"/>
+
+    <!--progress dialog for loading purpose-->
+
+
     <include
         layout="@layout/app_bar_user_area"
         android:layout_width="match_parent"
