--- a/app/src/main/res/layout/activity_frogotpassword.xml
+++ b/app/src/main/res/layout/activity_frogotpassword.xml
@@ -28,7 +28,7 @@
         android:layout_gravity="center"
         android:layout_width="@dimen/logo_w_h"
         android:layout_height="@dimen/logo_w_h"
-        android:src="@mipmap/headerimage1" />
+        android:src="@drawable/proxycatcher" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
@@ -49,7 +49,7 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="25dp"
-            android:background="@color/colorAccent"
+            android:background="@drawable/buttonproperty"
             android:text="Submit"
             android:textColor="@android:color/black" />
 </LinearLayout>
