--- a/app/src/main/res/layout/nav_header_user_area.xml
+++ b/app/src/main/res/layout/nav_header_user_area.xml
@@ -15,8 +15,9 @@
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="72dp"
+        android:layout_height="72dp"
+
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@android:drawable/sym_def_app_icon" />
 
