--- a/app/src/main/res/layout/student_search_data_fragment.xml
+++ b/app/src/main/res/layout/student_search_data_fragment.xml
@@ -104,7 +104,7 @@
         android:weightSum="1">
 
         <Button
-            android:background="@color/colorPrimary"
+            android:background="@color/button_search"
             android:id="@+id/etxt_fromdate"
             style="@style/Base.Widget.AppCompat.EditText"
             android:layout_width="0dp"
@@ -121,8 +121,8 @@
             android:layout_width="0dp"
             android:textAlignment="center"
             android:textColor="@color/common_google_signin_btn_text_light"
-            android:background="@color/colorPrimary"
             android:layout_height="wrap_content"
+            android:background="@color/button_search"
             android:layout_weight=".5"
             android:text="To Date" />
     </LinearLayout>
