--- a/app/src/main/res/layout/studentscan_list.xml
+++ b/app/src/main/res/layout/studentscan_list.xml
@@ -2,23 +2,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_orange_dark"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:background="@color/colorBackground"
+    android:padding="5dp"
     tools:context=".UserAreaActivity">
 
     <android.support.v7.widget.AppCompatTextView
         android:id="@+id/text_info"
-        android:visibility="gone"
-        android:gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
+        android:gravity="center"
         android:text="Populate Attendance by Scan or Add by clicking on + button"
-        />
-
+        android:visibility="gone" />
 
     <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -37,6 +32,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
+            app:backgroundTint="@color/colorPrimary"
             android:layout_margin="16dp"
             android:src="@android:drawable/ic_input_add"
             app:layout_behavior="com.project.saxena.akshay.attendance_management.custom_components.ScrollAwareFABBehavior" />
@@ -46,22 +42,15 @@
     <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/parent_layout_add_student_attendance"
         android:layout_width="match_parent"
-        android:fadeScrollbars="false"
         android:layout_height="match_parent"
+        android:fadeScrollbars="false"
         android:visibility="gone">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:orientation="vertical"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <!--   <ImageView
-                   android:layout_width="wrap_content"
-                   android:layout_height="72dp"
-                   android:layout_gravity="center_horizontal"
-                   android:layout_marginBottom="8dp"
-                   android:src="@drawable/icon" />
-   -->
             <android.support.v7.widget.AppCompatTextView
                 android:id="@+id/link_signup"
                 android:layout_width="fill_parent"
@@ -157,29 +146,29 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_marginTop="24dp"
                 android:orientation="horizontal"
-                android:weightSum="1"
-                android:layout_height="wrap_content">
-            <!-- Signup Button -->
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/save_button"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="12dp"
-                android:text="ADD" />
+                android:weightSum="1">
+                <!-- Signup Button -->
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/save_button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:gravity="center"
+                    android:padding="12dp"
+                    android:text="ADD" />
 
-            <!-- Signup Button -->
-            <android.support.v7.widget.AppCompatButton
-                android:id="@+id/cancel_button"
-                android:layout_width="0dp"
-                android:layout_weight="0.5"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:padding="12dp"
-                android:text="Cancel" />
+                <!-- Signup Button -->
+                <android.support.v7.widget.AppCompatButton
+                    android:id="@+id/cancel_button"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:gravity="center"
+                    android:padding="12dp"
+                    android:text="Cancel" />
 
             </LinearLayout>
 
