--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#77aaff</color>
-    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorPrimary">#6573c3</color>
+    <color name="colorPrimaryDark">#0f1640</color>
     <color name="colorAccent">#D5EAF6</color>
+    <color name="colorBackground">#F2F2F2</color>
 
-    <color name="bg_login">#26ae90</color>
+    <color name="bg_login">#ff6861</color>
     <color name="bg_register">#2e3237</color>
     <color name="bg_main">#428bca</color>
     <color name="white">#ffffff</color>
     <color name="input_login">#222222</color>
     <color name="input_login_hint">#999999</color>
+    <color name="button_search">#BBC2E5</color>
     <color name="input_register">#888888</color>
     <color name="input_register_bg">#3b4148</color>
     <color name="input_register_hint">#5e6266</color>
@@ -17,5 +19,6 @@
     <color name="btn_login">#26ae90</color>
     <color name="btn_login_bg">#eceef1</color>
     <color name="lbl_name">#333333</color>
+    <color name="textcolorprimary">#000000</color>
     <color name="btn_logut_bg">#ff6861</color>
 </resources>
